# obs-browser-transition

./: CMakeLists.txt  browser-transition.c  buildspec.json  installer.iss.in
.github/workflows/: build.yml
data/locale/: en-US.ini  es-ES.ini
